# n8nc

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli-spec.md
n8nc/: __init__.py  __main__.py
src/: api.rs  app.rs  auth.rs  canonical.rs  cli.rs  config.rs  edit.rs  error.rs  execute.rs  lint.rs  main.rs  repo.rs  schema.rs  tree.rs  validate.rs
src/cmd/: activate.rs  auth.rs  common.rs  credential.rs  doctor.rs  edit.rs  fmt.rs  init.rs  lint.rs  ls.rs  mod.rs  pull.rs  push.rs  runs.rs  search.rs  status.rs  trigger.rs  validate_cmd.rs  workflow.rs
tests/: cli_json.rs  contract_snapshots.rs
tests/common/: mod.rs
tests/snapshots/: contract_snapshots__activate_not_found.snap  contract_snapshots__activate_success.snap  contract_snapshots__archive_no_session.snap  contract_snapshots__archive_success.snap  contract_snapshots__deactivate_not_found.snap  contract_snapshots__deactivate_success.snap  contract_snapshots__diff_not_found.snap  contract_snapshots__diff_success.snap  contract_snapshots__fmt_check_failure.snap  contract_snapshots__fmt_success.snap  contract_snapshots__get_not_found.snap  contract_snapshots__get_success.snap  contract_snapshots__ls_auth_error.snap  contract_snapshots__ls_success.snap  contract_snapshots__pull_not_found.snap  contract_snapshots__pull_success.snap  contract_snapshots__push_conflict.snap  contract_snapshots__push_success.snap  contract_snapshots__runs_get_not_found.snap  contract_snapshots__runs_get_success.snap  contract_snapshots__runs_ls_auth_error.snap  contract_snapshots__runs_ls_success.snap  contract_snapshots__status_no_repo.snap  contract_snapshots__status_success.snap  contract_snapshots__trigger_not_found.snap  contract_snapshots__trigger_success.snap  contract_snapshots__unarchive_not_found.snap  contract_snapshots__unarchive_success.snap  contract_snapshots__validate_success.snap  contract_snapshots__validate_warnings.snap  contract_snapshots__workflow_new_duplicate.snap  contract_snapshots__workflow_new_success.snap  contract_snapshots__workflow_show_not_found.snap  contract_snapshots__workflow_show_success.snap
