[package]
name = "n8n-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "n8nc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.39", features = ["derive", "wrap_help"] }
keyring = "3.6.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
