[package]
name = "n8nc"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "CLI for n8n workflow automation"
license = "MIT"
repository = "https://github.com/rvben/n8nc"
homepage = "https://github.com/rvben/n8nc"
keywords = ["n8n", "workflow", "automation", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["docs/superpowers/", ".github/"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.39", features = ["derive", "wrap_help"] }
clap_complete = "4.6.0"
keyring = "3.6.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
similar = "2.7.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
wiremock = "0.6.5"
